# CLMM-Liquidity-Provider

./: .dockerignore  .gitignore  Cargo.toml  Makefile  README.md  STARTUP.md  codecov.yml
.github/workflows/: docker.yml  semver.yml
Docker/: .env.example  README.md  api.Dockerfile  cli.Dockerfile  docker-compose.yml  nginx.conf  web.Dockerfile
Docker/monitoring/: docker-compose.monitoring.yml
Docker/monitoring/alertmanager/: alertmanager.yml
Docker/monitoring/grafana/provisioning/dashboards/: dashboards.yml
Docker/monitoring/grafana/provisioning/dashboards/json/: api-overview.json  positions-overview.json
Docker/monitoring/grafana/provisioning/datasources/: datasources.yml
Docker/monitoring/prometheus/: prometheus.yml
Docker/monitoring/prometheus/rules/: alerts.yml
crates/api/: Cargo.toml
crates/api/src/: error.rs  lib.rs  main.rs  middleware.rs  models.rs  prelude.rs  routes.rs  server.rs  state.rs  websocket.rs
crates/api/src/handlers/: analytics.rs  health.rs  mod.rs  pools.rs  positions.rs  strategies.rs
crates/api/src/services/: mod.rs  position_service.rs  strategy_service.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: analyze.rs  backtest.rs  data.rs  mod.rs  optimize.rs
crates/cli/src/output/: chart.rs  export.rs  mod.rs  reports.rs  table.rs
crates/data/: Cargo.toml
crates/data/src/: lib.rs  pool_state.rs  prelude.rs  providers.rs  repository.rs  timeseries.rs
crates/data/src/cache/: memory.rs  mod.rs  persistent.rs  types.rs
crates/data/src/providers/: birdeye.rs  csv_provider.rs  jupiter.rs  mock.rs  mod.rs
crates/data/src/repositories/: database.rs  mod.rs
crates/domain/: Cargo.toml
crates/domain/src/: enums.rs  fees.rs  lib.rs  pool.rs  position.rs  prelude.rs  token.rs
crates/domain/src/entities/: mod.rs  pool.rs  position.rs  price_candle.rs  token.rs
crates/domain/src/math/: fee_math.rs  mod.rs  price_impact.rs
crates/domain/src/metrics/: fees.rs  mod.rs  types.rs
crates/domain/src/value_objects/: amount.rs  mod.rs  optimization_result.rs  percentage.rs  price.rs  price_range.rs  simulation_result.rs  types.rs
crates/execution/: Cargo.toml
crates/execution/src/: lib.rs  prelude.rs
crates/execution/src/alerts/: alert.rs  mod.rs  notifier.rs  rules.rs
crates/execution/src/monitor/: mod.rs  pnl_tracker.rs  position_monitor.rs  state_sync.rs
crates/execution/src/scheduler/: mod.rs  runner.rs  types.rs
crates/execution/src/strategy/: decision.rs  executor.rs  mod.rs  types.rs
crates/execution/src/transaction/: builder.rs  manager.rs  mod.rs  types.rs
crates/execution/src/wallet/: keypair.rs  manager.rs  mod.rs
crates/optimization/: Cargo.toml
crates/optimization/src/: constraints.rs  lib.rs  objective.rs  optimizer.rs  parameter_optimizer.rs  prelude.rs  range_optimizer.rs
crates/protocols/: Cargo.toml
crates/protocols/src/: lib.rs  prelude.rs  solana_client.rs
crates/protocols/src/events/: fetcher.rs  mod.rs  parser.rs  types.rs
crates/protocols/src/orca/: mod.rs  pool_reader.rs  position_reader.rs  provider.rs  whirlpool.rs
crates/protocols/src/raydium/: mod.rs
crates/protocols/src/rpc/: config.rs  health.rs  mod.rs  provider.rs
crates/simulation/: Cargo.toml
crates/simulation/src/: engine.rs  lib.rs  monte_carlo.rs  prelude.rs  price_path.rs  volume.rs
crates/simulation/src/strategies/: il_limit.rs  mod.rs  types.rs
