[workspace]
resolver = "2"
members = [
    "crates/domain",
    "crates/simulation",
    "crates/optimization",
    "crates/protocols",
    "crates/execution",
    "crates/data",
    "crates/api", "crates/cli",
]

[workspace.package]
version = "0.1.0"
authors = ["Joaquín Béjar García <jb@taunais.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joaquinbejar/CLMM-Liquidity-Provider"
homepage = "https://github.com/joaquinbejar/CLMM-Liquidity-Provider"
documentation = "https://docs.rs/clmm-liquidity-provider"
description = "Liquidity Provider Strategy Optimizer for Solana CLMMs"

[workspace.dependencies]
# Internal crates
clmm-lp-domain = { path = "crates/domain", version = "0.1.0" }
clmm-lp-simulation = { path = "crates/simulation", version = "0.1.0" }
clmm-lp-optimization = { path = "crates/optimization", version = "0.1.0" }
clmm-lp-protocols = { path = "crates/protocols", version = "0.1.0" }
clmm-lp-execution = { path = "crates/execution", version = "0.1.0" }
clmm-lp-data = { path = "crates/data", version = "0.1.0" }
clmm-lp-api = { path = "crates/api", version = "0.1.0" }
clmm-lp-cli = { path = "crates/cli", version = "0.1.0" }

# External dependencies
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.19", features = ["v4", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "bigdecimal"] }
solana-client = "3.0"
solana-sdk = "3.0"
solana-program = "3.0"
spl-token = "9.0"
axum = "0.8"
rust_decimal = "1.39"
u256 = "0.1"
primitive-types = { version = "0.14", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
zeroize = "1.8"
rand = "0.9"
dotenv = "0.15"
clap = "4.5"
borsh = "1.6"
rand_distr = "0.5"