[package]
name = "clmm-lp-cli"
version = "0.1.1-alpha.3"
authors = { workspace = true }
edition = "2024"
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
description = { workspace = true }

[dependencies]
clmm-lp-domain = { workspace = true }
clmm-lp-data = { workspace = true }
clmm-lp-simulation = { workspace = true }
clmm-lp-optimization = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
dotenv =  { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true, features = ["derive"] }
chrono = { workspace = true }
rust_decimal = { workspace = true }
primitive-types = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
prettytable-rs = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
rand = { workspace = true }
dirs = "5.0"

[dev-dependencies]
rust_decimal_macros = { workspace = true }

