[package]
name = "clmm-lp-data"
version = "0.1.1-alpha.3"
authors = { workspace = true }
edition = "2024"
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
description = { workspace = true }

[dependencies]
clmm-lp-domain = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
primitive-types = { workspace = true }
rust_decimal = { workspace = true }

[dev-dependencies]
tempfile = "3.20"
rust_decimal_macros = { workspace = true }
