[package]
name = "clmm-lp-domain"
version = "0.1.0"
authors = { workspace = true }
edition = "2024"
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
description = { workspace = true }

[dependencies]
serde = { workspace = true, features = ["derive"] }
rust_decimal = { workspace = true }
primitive-types = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
rust_decimal_macros = { workspace = true }
