[package]
name = "clmm-lp-execution"
version = "0.1.1-alpha.2"
authors = { workspace = true }
edition = "2024"
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
description = { workspace = true }

[dependencies]
clmm-lp-domain = { workspace = true }
clmm-lp-protocols = { workspace = true }
clmm-lp-optimization = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
rust_decimal = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
zeroize = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
bs58 = "0.5"

[dev-dependencies]
rust_decimal_macros = { workspace = true }
