[package]
name = "clmm-lp-protocols"
version = "0.1.1-alpha.2"
authors = { workspace = true }
edition = "2024"
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
description = { workspace = true }

[dependencies]
clmm-lp-domain = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
spl-token = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
borsh = { workspace = true }
primitive-types = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
rust_decimal = { workspace = true }
