[package]
name = "clmm-lp-simulation"
version = "0.1.0"
authors = { workspace = true }
edition = "2024"
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
description = { workspace = true }

[dependencies]
clmm-lp-domain = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
rust_decimal = { workspace = true }

[dev-dependencies]
primitive-types = { workspace = true }
uuid = { workspace = true }
