[package]
name = "clmm-lp-simulation"
version = "0.1.1-alpha.2"
authors = { workspace = true }
edition = "2024"
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
description = { workspace = true }

[dependencies]
clmm-lp-domain = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
rust_decimal = { workspace = true }

[dev-dependencies]
primitive-types = { workspace = true }
uuid = { workspace = true }
rust_decimal_macros = { workspace = true }
